--- a/views/administracion/listas/listaEmpresas.jade
+++ b/views/administracion/listas/listaEmpresas.jade
@@ -2,8 +2,8 @@ doctype html
 head
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    link(rel="stylesheet", href="/stylesheets/main.css")
-    link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css")
+    link(rel="stylesheet", href="/stylesheets/genericoListas.css")
+    //link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css")
     title Empresas
   body
     header.header
@@ -51,10 +51,11 @@ head
             form(action="verListaCentrosCosto"  method='POST')
               input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
               button(type="submit" class="btnMenu") Centros de Costo
-          a 
-            form(action="verListaUsuarios"  method='POST')
-              input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
-              button(type="submit" class="btnMenu") Usuarios
+          if usuario.tipoUsuario == 1          
+            a 
+              form(action="verListaUsuarios"  method='POST')
+                input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
+                button(type="submit" class="btnMenu") Usuarios
   
         label(for='btn-menu') ✖️ 
 
@@ -69,9 +70,10 @@ head
     form.col-12(action="reporteEmpresas"  method='POST' name="Id")
       input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")
       button(type="submit" class="btnReporte" ) Generar reporte
-    form.col-12(action="nuevaEmpresa"  method='POST' name="Id")
-      input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")
-      button(type="submit" class="bntNuevoLista" ) Agregar Empresa
+    if usuario.tipoUsuario == 1 || usuario.tipoUsuario == 2 
+      form.col-12(action="nuevaEmpresa"  method='POST' name="Id")
+        input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")
+        button(type="submit" class="bntNuevoLista" ) Agregar Empresa
 
     br
     br
