--- a/views/administracion/reportes/reporteCentrosCosto.jade
+++ b/views/administracion/reportes/reporteCentrosCosto.jade
@@ -76,7 +76,7 @@ html(lang='es')
         label(class="lblElaboradousuario") Usuario: #{usuario.nombreCompleto}
         
               
-        laber(class="lblElaboradoFecha") Fecha y Hora de imprecion: #{fecha} #{hora} hrs
+        laber(class="lblElaboradoFecha") Fecha y Hora de impresion: #{fecha} #{hora} hrs
         br  
         br
         br    
