--- a/views/administracion/unosolo/verUnTipoUnidad.jade
+++ b/views/administracion/unosolo/verUnTipoUnidad.jade
@@ -3,7 +3,7 @@ html(lang='es')
   head
     meta(charset='UTF-8')
     title Tipo Unidad
-    link(rel='stylesheet' href='/stylesheets/verUnTipo.css')
+    link(rel='stylesheet' href='/stylesheets/genericoUnoSolo.css')
   body
     header.header
       .container
@@ -50,10 +50,11 @@ html(lang='es')
             form(action="verListaCentrosCosto"  method='POST')
               input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
               button(type="submit" class="btnMenu") Centros de Costo
-          a 
-            form(action="verListaUsuarios"  method='POST')
-              input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
-              button(type="submit" class="btnMenu") Usuarios
+          if usuario.tipoUsuario == 1          
+            a 
+              form(action="verListaUsuarios"  method='POST')
+                input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
+                button(type="submit" class="btnMenu") Usuarios
   
         label(for='btn-menu') ✖️
 
@@ -100,13 +101,13 @@ html(lang='es')
     .row
         
         .input-group
-          if usuario.esAdministrador == true
+          if usuario.tipoUsuario == 1
             input(type="submit", value="Guardar" class="brnGuardar")
 
 .container3
   .row 
     .input-group
-      if usuario.esAdministrador == true
+      if usuario.tipoUsuario == 1 || usuario.tipoUsuario == 2
         form(action="nuevoTipoUnidad" method='POST')    
           input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")        
           input(type="submit", value="Nuevo" class ="brnNuevo")
@@ -114,7 +115,7 @@ html(lang='es')
 .container3
   .row
     .input-group    
-      if usuario.esAdministrador == true 
-        form(action="verListaTipoUnidad" method='POST')    
-          input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")                     
-          input(type="submit", value="Cancelar" class ="btnCancelar")           
+      
+      form(action="verListaTipoUnidad" method='POST')    
+        input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")                     
+        input(type="submit", value="Cancelar" class ="btnCancelar")           
