--- a/public/stylesheets/genericoUnoSolo.css
+++ b/public/stylesheets/genericoUnoSolo.css
@@ -1,7 +1,7 @@
 body {
 	background: url(../images/main.jpg) no-repeat center center fixed;
 	background-size: cover;
-	font-weight: bold;
+	font-family: Arial;
 }
 
 * {
@@ -83,6 +83,7 @@ body {
 /*Menù lateral*/
 #btn-menu {
 	display: none;
+	
 }
 
 
@@ -112,7 +113,19 @@ body {
 	opacity: 1;
 	visibility: visible;
 }
+#btn-menu:checked~.abajo {
+	opacity: 0;
+	visibility: visible;
+	margin-top: 1000px;
+}
 
+
+
+#btn-menu:checked~.container2 {
+	opacity: 0.3;
+	visibility: visible;
+	margin-top: 10000px;
+}
 
 .cont-menu {
 	width: 100%;
@@ -386,52 +399,309 @@ tr:nth-child(even) {
 	font-weight: bold;
 }
 
-table{
-	font-size: 15px;
-	font-weight: bold;
+
+
+
+
+
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+body {
+  padding: 1em;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 15px;
+  color: #b9b9b9;
+  background-color: #e3e3e3;
+}
+h4 ,h3 {
+  color: #fcfcfc;
+}
+input,
+input[type="radio"] + label,
+input[type="checkbox"] + label:before,
+select option,
+select {
+  width: 100%;
+  padding: 1em;
+  line-height: 1.4;
+  /*background-color: #f9f9f9;*/
+  /*border: 1px solid #e5e5e5;*/
+  border-radius: 3px;
+  -webkit-transition: 0.35s ease-in-out;
+  -moz-transition: 0.35s ease-in-out;
+  -o-transition: 0.35s ease-in-out;
+  transition: 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
 }
 
 
-.btnReporte{
-	background-color: #e7e7e7;
-	border: none;
-	color: black;
-	padding: 7px 26px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	border-radius: 5px;
-	width: 250px;
-	/*margin-left: 8px;*/
-
-	-webkit-transition-duration: 0.4s;
-
-	transition-duration: 0.4s;
-	font-weight: bold;
-	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	cursor: pointer;
-	margin-top: 1%;
+input:focus {
+  outline: 0;
+  /*border-color: #28d3c1;*/
+  color: black;
+}
+input:focus + .input-icon i {
+  /*color: #55d9cb;*/
+  color: black;
+}
+input:focus + .input-icon:after {
+  /*border-right-color: #55d9cb;*/
+  color: black;
+}
+input[type="radio"] {
+  display: none;
+}
+input[type="radio"] + label,
+select {
+  display: inline-block;
+  width: 50%;
+  text-align: center;
+  float: left;
+  border-radius: 0;
+}
+input[type="radio"] + label:first-of-type {
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+input[type="radio"] + label:last-of-type {
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+input[type="radio"] + label i {
+  padding-right: 0.4em;
+}
+input[type="radio"]:checked + label,
+input:checked + label:before,
+select:focus,
+select:active {
+  /*background-color: #55d9cb;*/
+  color: black;
+  /*color: #fff;*/
+  /*border-color: #28d3c1;*/
+}
+input[type="checkbox"] {
+  display: none;
+}
+input[type="checkbox"] + label {
+  position: relative;
+  display: block;
+  padding-left: 1.6em;
+}
+input[type="checkbox"] + label:before {
+  position: absolute;
+  top: 0.2em;
+  left: 0;
+  display: block;
+  width: 1em;
+  height: 1em;
+  padding: 0;
+  content: "";
+}
+input[type="checkbox"] + label:after {
+  position: absolute;
+  top: 0.45em;
+  left: 0.2em;
+  font-size: 0.8em;
+  color: #fff;
+  opacity: 0;
+  font-family: FontAwesome;
+  content: "\f00c";
+}
+input:checked + label:after {
+  opacity: 1;
+}
+select {
+  height: 3.4em;
+  line-height: 2;
+  width: 100%;
+}
+select:first-of-type {
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+select:last-of-type {
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+select:focus,
+select:active {
+  outline: 0;
+}
+select option {
+  /*background-color: #55d9cb;*/
+  color: black;
+  /*color: #fff;*/
+}
+.input-group {
+  margin-bottom: 1em;
+  zoom: 1;
+}
+.input-group:before,
+.input-group:after {
+  content: "";
+  display: table;
+}
+.input-group:after {
+  clear: both;
+}
+.input-group-icon {
+  position: relative;
+}
+.input-group-icon input {
+  padding-left: 4.4em;
+}
+.input-group-icon .input-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 3.4em;
+  height: 3.4em;
+  line-height: 3.4em;
+  text-align: center;
+  pointer-events: none;
+}
+.input-group-icon .input-icon:after {
+  position: absolute;
+  top: 0.6em;
+  bottom: 0.6em;
+  left: 3.4em;
+  display: block;
+  border-right: 1px solid #e5e5e5;
+  content: "";
+  -webkit-transition: 0.35s ease-in-out;
+  -moz-transition: 0.35s ease-in-out;
+  -o-transition: 0.35s ease-in-out;
+  transition: 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+.input-group-icon .input-icon i {
+  -webkit-transition: 0.35s ease-in-out;
+  -moz-transition: 0.35s ease-in-out;
+  -o-transition: 0.35s ease-in-out;
+  transition: 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+.container2 , .container3 {
+	font-family: 20px;
+	max-width: 100em;
+	padding: 1em 3em 2em 3em;
+	margin: 0em auto;
+	background-color: #333;
+	/*background-color: #00618B;*/
+	border-radius: 4.2px;
+	box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
+	margin-top: 30px;
+  
+}
+.row {
+  zoom: 1;
+}
+.row:before,
+.row:after {
+  content: "";
+  display: table;
+}
+.row:after {
+  clear: both;
+}
+.col-half {
+  padding-right: 10px;
+  float: left;
+  width: 50%;
+  display: inline-block;
+}
+.col-half:last-of-type {
+  padding-right: 0;
+}
+.col-third {
+  padding-right: 10px;
+  float: left;
+  width: 33.33333333%;
+}
+.col-third:last-of-type {
+  padding-right: 0;
+}
+@media only screen and (max-width: 540px) {
+  .col-half {
+    width: 100%;
+    padding-right: 0;
+  }
 }
 
-.bntNuevoLista{
+
+.brnGuardar{
 	background-color: #4CAF50;
-	border: none;
-	color: rgb(255, 255, 255);
-	padding: 7px 26px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	border-radius: 5px;
-	width: 250px;
-	/*margin-left: 8px;*/
-
-	-webkit-transition-duration: 0.4s;
-
-	transition-duration: 0.4s;
+	color: white;
+	font-size: 17px;
 	font-weight: bold;
-	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	/*width: 300px;*/
+}
+
+.brnGuardar:hover{
 	cursor: pointer;
-	margin-top: 1%;
+}
+
+.brnNuevo{
+	background-color: #008CBA;
+	color: white;
+	font-size: 17px;
+	font-weight: bold;
+	/*width: 300px;*/
+	/*margin-left: 50%;	*/
+}
+
+.brnNuevo:hover{
+	cursor: pointer;
+}
+
+
+.opt{
+	font-size: 20px;
+	color: black;
+}
+
+.container3{
+	margin-top: -37px;
+}
+
+
+
+.ok{
+	font-size: 25px;
+	background-color: #27fc32;
+	font-weight: bold;
+	color: #000000;
+}
+
+.lblError{
+	font-size: 25px;
+	background-color: #fc3527;
+	font-weight: bold;
+	color: #000000;
+}
+
+.btnCancelar{
+	background-color: #F5CF17;
+	color: rgb(0, 0, 0);
+	font-size: 17px;
+	font-weight: bold;
+}
+
+.btnCancelar{
+	cursor: pointer;
+}
+
+.btnCambiarPss{
+	background-color: #686868;
+	color: rgb(255, 255, 255);
+	font-size: 17px;
+	font-weight: bold;
+}
+
+.btnCambiarPss:hover{
+	cursor: pointer;
 }
