--- a/views/administracion/reportes/reporteFranquicias.jade
+++ b/views/administracion/reportes/reporteFranquicias.jade
@@ -48,7 +48,7 @@ html(lang='es')
         label(class="lblElaboradousuario") Usuario: #{usuario.nombreCompleto}
         
               
-        laber(class="lblElaboradoFecha") Fecha y Hora de imprecion: #{fecha} #{hora} hrs
+        laber(class="lblElaboradoFecha") Fecha y Hora de impresion: #{fecha} #{hora} hrs
         br  
         br
         br    
